--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,13 @@ p {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid grey;
-  padding: 2% 10%;
+  padding: 20px 50px;
   font-size: 1em;
   text-transform: lowercase;
 }
 
 #main-content {
-  margin-top: 2%;
+  margin-top: 20px;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
@@ -34,24 +34,63 @@ p {
 }
 
 #side-bar {
-  margin-right: 2%;
+  margin-right: 20px;
 }
 
 #widgets {
+  width: 80%;
+  height: 600px;
   display: grid;
-  grid-template-columns: 400px 400px;
-  grid-gap: 2%;
+  grid-template-columns: repeat(auto-fit, 250px);
+  grid-template-rows: repeat(auto-fit, 100px);
+  grid-gap: 10px;
 }
 
-#clock-time, #clock-date {
+#clock-display {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1em);
+  justify-self: flex-end;
+}
+
+#clock-time {
   display: flex;
   justify-content: space-between;
+  /* grid-column: 1/3;
+  grid-row: 1/2; */
+  grid-area: 1/1/2/3;
 }
 
-#clock-widget{
-  border: 1px solid red;
+#clock-date {
+  display: flex;
+  justify-content: space-between;
+  /* grid-column: 1/3;
+  grid-row: 2/3; */
+  grid-area: 2/1/3/3;
 }
 
-#weather-widget{
+#tabs-display {
+  height: 65%;
+  display: grid;
+  grid-template-rows: 1fr 3fr;
+  justify-self: flex-end;
+}
+
+#tab-header {
+  min-height: 1em;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+}
+
+#tab-content {
+  overflow: auto;
+}
+
+#clock-widget, #tabs-widget, #weather-widget{
   border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100px;
 }
