--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,12 @@ body {
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 2em;
 }
 
 p {
   font-family: 'Playfair Display', serif;
-  font-size: 1em;
+  font-size: 1.5em;
 }
 
 #nav-bar {
@@ -31,29 +31,45 @@ p {
   margin-right: auto;
   display: flex;
   justify-content: space-between;
-  align-content: center;
+  /* align-content: center; */
   /* display: grid;
   grid-template-columns: 400px 400px;
   grid-gap: 2%; */
 }
 
 #side-bar {
+  border: 1px solid red;
   margin-right: 20px;
 }
 
 #widgets {
   width: 80%;
-  height: 600px;
+  height: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 250px);
-  grid-template-rows: repeat(auto-fit, 100px);
+  grid-template-columns: repeat(auto-fit, 300px);
+  grid-auto-rows: minmax(150px, auto);
   grid-gap: 10px;
+  justify-content: center;
+  padding: 0 10px;
+  margin: 10px;
+}
+
+@media (min-width: 880px) {
+  #widgets {
+    grid-template-columns: repeat(2, 300px);
+  }
+}
+
+@media (max-width: 879px) {
+  #widgets {
+    grid-template-columns: repeat(auto-fit, 300px);
+  }
 }
 
 #clock-display {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1em);
+  grid-template-rows: repeat(2, 1fr);
 }
 
 #clock-time {
@@ -75,7 +91,7 @@ p {
 #tabs-display {
   height: 65%;
   display: grid;
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 1em 3fr;
   justify-self: flex-end;
 }
 
@@ -121,10 +137,23 @@ p {
   padding: 0px 10px;
 }
 
-#clock-widget, #tabs-widget, #weather-widget{
+#weather-display {
+  display: flex;
+  justify-content: space-between;
+}
+
+#weather-icon {
+  margin: auto 0;
+}
+
+#clock-widget, #tabs-widget, #weather-widget {
   border: 1px solid red;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100px;
+  padding: 10px;
+}
+
+#tabs-widget {
+  height: 300px;
 }
